Make sure beta doesn't overlap the logo

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -31,13 +31,13 @@ html, body {
   margin-bottom: -20px;
   -webkit-box-shadow: 0px 5px 23px 0px rgba(0,0,0,0.61);
   -moz-box-shadow: 0px 5px 23px 0px rgba(0,0,0,0.61);
-  box-shadow: 0px 5px 23px 0px rgba(0,0,0,0.61);  
+  box-shadow: 0px 5px 23px 0px rgba(0,0,0,0.61);
 }
 
 .navbar-logo
 {
   margin-top: 0px;
-  padding-left: 50px;
+  padding-left: 85px;
   padding-top: 10px;
   padding-bottom: 0;
 }
@@ -65,7 +65,7 @@ html, body {
 }
 
 .btn-purple:hover,
-.btn-purple:focus, 
+.btn-purple:focus,
 .btn-purple:active {
   color: white;
   background-color: #553666;
